# structured-address-fix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: error-taxonomy.md  index.md  nov-2026-cutover.md  policies.md  quickstart.md  remediation-model.md  writing-a-rule-pack.md
examples/: 01_classify_address.py  02_assess_address_pre_post_cliff.py  03_remediate_address.py  04_list_policies.py  05_assess_message.py  06_remediate_apply_message.py  07_preview_patch.py  08_non_default_policy.py  README.md
requirements/: build.txt  docs.in  docs.txt  lint.in  lint.txt  sbom.in  sbom.txt  security.txt  test.in  test.txt
structured_address_fix/: __init__.py  config.py  errors.py
structured_address_fix/adapters/: __init__.py  _xmlutil.py  iso3166.py  xml_reader.py  xml_writer.py  xpath.py
structured_address_fix/adapters/heuristics/: __init__.py  base.py  continental.py  de.py  fallback.py  fr.py  gb.py  jp.py  us.py
structured_address_fix/data/rulebook_clauses/: cbpr-2026.json  generic-structured.json  hvps-plus.json  sepa.json
structured_address_fix/domain/: __init__.py  address.py  enums.py  findings.py  party.py  remediation.py  result.py
structured_address_fix/plugins/: __init__.py  licensing.py
structured_address_fix/policies/: __init__.py  base.py  cbpr_2026.py  generic_structured.py  hvps_plus.py  registry.py  sepa.py
structured_address_fix/services/: __init__.py  apply_patch.py  assess.py  classify.py  facade.py  remediate.py
tests/: conftest.py  test_examples.py  test_version.py
tests/integration/: test_end_to_end.py
tests/property/: test_remediation_properties.py
tests/unit/adapters/: test_heuristics.py  test_iso3166.py  test_xml_reader.py  test_xml_writer.py  test_xpath.py
tests/unit/policies/: conftest.py  test_base.py  test_cbpr_2026.py  test_generic_structured.py  test_hvps_plus.py  test_plugins.py  test_registry.py  test_sepa.py
tests/unit/services/: test_assess.py  test_classify.py  test_facade.py  test_remediate.py
